--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ main a:hover{
     text-align: center;
     font-family: Arial, sans-serif;
     cursor: pointer;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0.1);
 }
 
 .product-card:hover {
@@ -67,8 +68,17 @@ main a:hover{
     font-weight: bold;
     margin-top: 10px;
 }
-
-
+.product-card button{
+    background-color: #5f90c5;
+    color: white;
+    border-radius: 5px;
+    padding-left: 5px;
+    padding: 5px;
+    margin: 5px;
+}
+.product-card   button:hover{
+    background-color: #4a7aaf;
+}
 .product-card a {
     text-decoration: none;
     color: inherit;
@@ -174,4 +184,51 @@ nav ul li a:hover{
 }
 .forgot-password:hover{
     text-decoration: underline;
+}
+.catalog{
+    margin: 0;
+}
+.catalog h1 {
+    text-align: left;
+    color: #333;
+}
+.searchbar{
+    width: 100%;
+    max-width: 600px;
+    margin: 20px;
+    display: flex;
+    margin-left: 0px;
+}
+.searchbar input{
+    padding: 8px;
+    border: 1px solid #a3a3a3;
+    border-radius: 5px 0 0 5px;
+    font-size: 16px;
+}
+.searchbar button{
+    background-color: #2e5681;
+    color: white;
+    cursor: pointer;
+    border-radius: 0 5px 5px 0;
+    width: 25%;
+    font-size: 16px;
+    transform: 0.3s;
+}
+.searchbar button:hover{
+    background-color: #1a3a5e;
+}
+
+.catalog-filter{
+    max-width: 250px;  
+    background-color: azure;
+    padding: 0px 40px 0px 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0.1);;
+}.catalog-container{
+    display: flex;
+    gap: 20px;
+}
+.catalog-product-list{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
